[gd_scene load_steps=71 format=2]

[ext_resource path="res://src/Actors/WizardNPC.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/Wizard Pack/Idle.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/Wizard Pack/Jump.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/Wizard Pack/Attack1.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/Wizard Pack/Attack2.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/Wizard Pack/Death.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/Wizard Pack/Run.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/Wizard Pack/Hit.png" type="Texture" id=8]
[ext_resource path="res://assets/Effects/TalkQuestionMark.png" type="Texture" id=9]
[ext_resource path="res://assets/Effects/SFX401_nyknck/SFX401_02.png" type="Texture" id=10]
[ext_resource path="res://assets/Effects/SFX401_nyknck/SFX401_06.png" type="Texture" id=11]
[ext_resource path="res://assets/Effects/SFX401_nyknck/SFX401_07.png" type="Texture" id=12]
[ext_resource path="res://assets/Effects/SFX401_nyknck/SFX401_03.png" type="Texture" id=13]
[ext_resource path="res://assets/Effects/SFX401_nyknck/SFX401_05.png" type="Texture" id=14]
[ext_resource path="res://assets/Effects/SFX401_nyknck/SFX401_01.png" type="Texture" id=15]
[ext_resource path="res://assets/Effects/SFX401_nyknck/SFX401_04.png" type="Texture" id=16]
[ext_resource path="res://assets/Effects/laugh_emoticon.png" type="Texture" id=17]
[ext_resource path="res://assets/mine/ActorsLaugh.tres" type="Animation" id=18]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="SpriteFrames" id=44]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "Attack1",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "Attack2",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=46]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "laugh",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "questionMark",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=47]
radius = 40.0

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 15.1192, 39.5601 )

[sub_resource type="Animation" id=49]
length = 0.7
tracks/0/type = "method"
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "default", false ],
"method": "play"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WizardNPCSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=50]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WizardNPCSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AnimatedSprite")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "", false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=51]
resource_name = "reset_emoticon"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Emoticons:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15.0741, -100.457 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Emoticons:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=52]
resource_name = "reset_emoticons"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Emoticons:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "questionMark" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Emoticons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15.0741, -100.457 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Emoticons:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="WizardNPC" type="KinematicBody2D"]
position = Vector2( 0, -0.280609 )
scale = Vector2( 0.6, 0.6 )
collision_layer = 128
collision_mask = 2147483660
script = ExtResource( 1 )

[node name="WizardNPCSprite" type="AnimatedSprite" parent="."]
position = Vector2( 7.05561, -45.898 )
frames = SubResource( 44 )
animation = "Idle"
frame = 3
playing = true
offset = Vector2( -15, 0 )
flip_h = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1.27452, -31.2665 )
scale = Vector2( 2, 2 )
frames = SubResource( 45 )

[node name="Emoticons" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 13.5134, -97.0234 )
scale = Vector2( 2, 2 )
frames = SubResource( 46 )
animation = "questionMark"

[node name="TalkArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalkArea"]
position = Vector2( -0.441462, -41.4957 )
shape = SubResource( 47 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.656752, -39.5026 )
shape = SubResource( 48 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_spawn"
anims/fade = SubResource( 49 )
anims/fade_spawn = SubResource( 50 )
anims/reset_emoticon = SubResource( 51 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "reset_emoticons"
anims/laugh = ExtResource( 18 )
anims/reset_emoticons = SubResource( 52 )

[connection signal="body_entered" from="TalkArea" to="." method="_on_TalkArea_body_entered"]
[connection signal="body_exited" from="TalkArea" to="." method="_on_TalkArea_body_exited"]
